More spacing issues

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6820,6 +6820,5 @@ button.close {
 }
 
 #something {
-    padding-top: 6%;
 }
 /*# sourceMappingURL=bootstrap.css.map */
